objects/Rating__c.object
<CustomObject>
    <fields>
        <fullName>Rating_for__c</fullName>
        <label>Rating for</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_given_to_which_Student__c</fullName>
        <label>Rating given to which Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>student__c.Course_Opted__c</field>
                <operation>equals</operation>
                <value>Salesforce Admin, Salesforce Developer\, Python</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>student__c</referenceTo>
        <relationshipLabel>Ratings</relationshipLabel>
        <relationshipName>Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating_out_of_10__c</fullName>
        <label>Rating out of 10</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>Rating_given_to_which_Student__r.Student_Name__c</formula>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_s_Contact__c</fullName>
        <formula>Rating_given_to_which_Student__r.Student_s_Contact__c</formula>
        <label>Student&apos;s Contact</label>
        <type>Text</type>
    </fields>
    <label>Rating</label>
    <nameField>
        <displayFormat>R - {0000}</displayFormat>
        <label>Rating ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>